--- a/NYC_CitiBike_Challenge.ipynb
+++ b/NYC_CitiBike_Challenge.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,17 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3. Convert the 'tripduration' column to datetime datatype.\n",
-    "citibike_df[\"tripduration\"]=pd.to_datetime(citibike_df[\"tripduration\"], unit='s')"
+    "citibike_df[\"tripduration\"]=pd.to_datetime(citibike_df[\"tripduration\"], unit='m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
